--- a/users_manager/templates/registration/password_reset_form.html
+++ b/users_manager/templates/registration/password_reset_form.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Log in</title>
+		<title>Reset password</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
@@ -57,7 +57,7 @@
 				<footer>
 
 					<button type="submit" class="button" style="background-color: green;">Send me instructions</button>
-                     <a id="id_back_button" class="button" href="{% url 'login' %}" >Back</a>
+                     <a id="id_back_button" class="button" onclick="window.history.back();" >Back</a>
 				</footer>
 			</form>
 
