--- a/users_manager/templates/users_manager/user_data.html
+++ b/users_manager/templates/users_manager/user_data.html
@@ -1,20 +1,53 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User Data</title>
-</head>
-<body>
-    <h3>User Information</h3>
-    <a href="{% url 'users_manager:edit_user_data' user.id %}">Edit my user data</a>
-    <ol>
-        <li>Username: {{ user.username }}</li>
-        <li>First name: {{ user.first_name }}</li>
-        <li>Last name: {{ user.last_name }}</li>
-        <li>Email: {{ user.email }}</li>
-    </ol>
-    <p><a href="{% url 'users_manager:password_change' %}"><span style="margin-left: 40px;">Password change<span></a></p>
+<style>
+</style>
+<html>
+	<head>
+		<title>User data</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+	</head>
+	<body class="bg-study">
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="js/jquery.placeholder.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
-<a href="{% url 'user_page' %}">Back to my user profile</a>
-</body>
+		<div class="body body-s">
+
+			<form method="post" class="sky-form">
+                {% csrf_token %}
+				<header>User data<a id="id_back_button" class="button" onclick="window.history.back();">Back</a></header>
+				<fieldset>
+                    {{ form.errors }}
+					<section>
+                           - Username: {{ user.username }}
+					</section>
+
+					<section>
+						- First name: {{ user.first_name }}
+					</section>
+
+					<section>
+						- Last name: {{ user.last_name }}
+					</section>
+
+					<section>
+						- Email: {{ user.email }}
+					</section>
+				</fieldset>
+
+
+				<footer>
+                    <a class="button" href="{% url 'users_manager:edit_user_data' user.id %}" style="background-color: green;">Edit</a>
+                    <a class="button" href="{% url 'users_manager:password_change' %}" style="background-color: green;">Password change</a>
+                </footer>
+			</form>
+
+		</div>
+
+
+	</body>
 </html>
