--- a/micro_content_manager/templates/micro_content_manager/micro_content_info.html
+++ b/micro_content_manager/templates/micro_content_manager/micro_content_info.html
@@ -1,66 +1,94 @@
+{% load static %}
 <!DOCTYPE html>
-
-<style>
-
-#full-container{
-    margin-left: 540px;
-}
-
+<style xmlns="http://www.w3.org/1999/html" xmlns:Tags="http://www.w3.org/1999/xhtml">
+    .blue{
+	    color: #2da5da;
+    }
 </style>
+<html>
+	<head>
+		<title>Micro-content info</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+	</head>
+	<body class="bg-study">
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="js/jquery.placeholder.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Micro Content Info</title>
-</head>
-<body>
+		<div class="body body-s">
+			<form method="post" class="sky-form">
+                {% csrf_token %}
+				<header>Micro-content info<a id="id_back_button" class="button" onclick="window.history.back()" >Back</a></header>
+				    <fieldset>
+                        <section>
+                            <span class="blue"> - Title: </span>{{ micro_content.title}}
+                        </section>
 
-<div id="full-container">
-    <h2>Micro Content Information</h2>
-        <ul>
-            <li>Title: {{ micro_content.title}}</li>
+                        <section>
+                            <span class="blue"> - Tags: </span>
+                            {% for t in micro_content.mc_tags.all %}
+                               <span > {{ t }} &nbsp; </span>
+                            {% endfor %}
+                        </section>
 
-                <li>Tags:
-                    {% for t in micro_content.mc_tags.all %}
-                       <span > {{ t }} &nbsp; </span>
-                    {% endfor %}
-                </li>
-                <li>Videos:</li>
-                  {% for v in micro_content.videos %}
-                       <li>Video {{ forloop.counter }}</li>
-                        Url: {{ v.url }}
-                        Format: {{ v.video_format }}
-                        Upload_form: {{ v.video_upload_form }}
-                  {% endfor%}
+                        <section>
+                            <span class="blue"> - Text: </span>
+                            {% for text in micro_content.text %}
+                               <span > {{ text }} </span> <br>
+                            {% endfor %}
+                        </section>
+
+                    </fieldset>
+                    <fieldset>
+                        <section>
+                            <span class="blue"> - Videos: </span>
+                              {% for v in micro_content.videos %}
+                                   <li>Video {{ forloop.counter }}</li>
+                                    <span class="blue"> - Url: </span> {{ v.url }} <br>
+                                    <span class="blue"> - Format: </span> {{ v.video_format }} <br>
+                                    <span class="blue"> - Upload_form:</span> {{ v.video_upload_form }}
+                              {% endfor%}
+                        </section>
+                    </fieldset>
+
+                    <fieldset>
+                        <section>
+                               <span class="blue"> - Metadata: </span> <br>
+                               <span class="blue"> Author: </span>{{ micro_content.meta_data.author }} <br>
+                               <span class="blue">Publication date: </span>{{ micro_content.meta_data.pub_date }} <br>
+                               <span class="blue">Last modification: </span>{{ micro_content.meta_data.last_modification }} <br>
+                               <span class="blue">Creation type: </span>{{ micro_content.meta_data.creation_type }}
+                        </section>
+                    </fieldset>
 
 
-                <li></li>
-                <li>MetaData:</li>
-                <li>Author: {{ micro_content.meta_data.author }}</li>
-                <li>Publication date: {{ micro_content.meta_data.pub_date }}</li>
-                <li>Last modification: {{ micro_content.meta_data.last_modification }}</li>
-                <li>Creation type: {{ micro_content.meta_data.creation_type }}</li>
-                <li></li>
-                <li>Text:
-                 {% for text in micro_content.text %}
-                        {{ text }} <br>
-                    {% endfor %}
-                </li>
-                <li>Quiz: {{  micro_content.questions.count }}
-                    <br>
-                {% for q in micro_content.questions.all %}
-                       Question {{ forloop.counter }}:  {{ q.question}}  <br>
 
-                       Choices:
-                       {% for c in q.choices.all %}
-                        <span>'{{ c.choice_text.strip }}' &nbsp;</span>
-                       {% endfor %} <br>
-                       Answer:  '{{ q.answer }}'  <br>
-                       Explanation:  {{ q.explanation }}  <br><br>
-                {% endfor %}
-            </li>
-        </ul>
-    <a href="{% url 'user_page' %}">Back to my user profile</a>
-</div>
-</body>
+
+
+                     <fieldset>
+                        <section>
+                            <span class="blue"> - Quiz: </span><br>
+                              {% for q in micro_content.questions.all %}
+                                   <li>Question {{ forloop.counter }}:  {{ q.question}}</li>
+                                  <span class="blue"> Choices:</span>
+                                       {% for c in q.choices.all %}
+                                        <span>'{{ c.choice_text.strip }}' &nbsp;</span>
+                                       {% endfor %} <br>
+                                        <span class="blue"> Answer: </span>  '{{ q.answer }}'  <br>
+                                        <span class="blue">  Explanation:  </span> {{ q.explanation }}
+                              {% endfor%}
+                        </section>
+                    </fieldset>
+				<footer>
+                    <a class="button" href="{% url 'micro_content_manager:edit' micro_content.id %}" style="background-color: green;">Edit</a>
+				</footer>
+			</form>
+
+		</div>
+
+
+	</body>
 </html>
